--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "grunt-contrib-copy": "~0.4.0",
     "grunt-contrib-concat": "~0.1.2",
     "grunt-contrib-coffee": "~0.4.0",
-    "grunt-contrib-uglify": "~0.1.1",
+    "grunt-contrib-uglify": "~0.1.2",
     "grunt-contrib-compass": "~0.1.2",
     "grunt-contrib-jshint": "~0.1.1",
     "grunt-contrib-cssmin": "~0.4.1",
@@ -17,17 +17,17 @@
     "grunt-contrib-htmlmin": "0.1.1",
     "grunt-contrib-imagemin": "0.1.2",
     "grunt-contrib-livereload": "0.1.1",
-    "grunt-bower-hooks": "~0.2.0",
+    "grunt-bower-requirejs": "~0.4.1",
     "grunt-usemin": "~0.1.9",
     "grunt-regarde": "~0.1.1",
     "grunt-requirejs": "~0.3.2",
     "grunt-mocha": "~0.2.2",
     "grunt-open": "~0.2.0",
     "matchdep": "~0.1.1",
-    "grunt-cucumber": "latest",
-    "cucumber": "latest",
-    "grunt-karma": "~0.4.2",
-    "zombie": "latest"
+    "mocha": "latest",
+    "chai": "latest",
+    "sinon": "latest",
+    "sinon-chai": "latest"
   },
   "engines": {
     "node": ">=0.8.0"
